RESOLVED FIXED314375
[Site Isolation] cross-site-to-same-site-redirection-prefetch.https.html fails
https://bugs.webkit.org/show_bug.cgi?id=314375
Summary [Site Isolation] cross-site-to-same-site-redirection-prefetch.https.html fails
Ryosuke Niwa
Reported 2026-05-07 23:55:38 PDT
imported/w3c/web-platform-tests/speculation-rules/speculation-tags/cross-site-to-same-site-redirection-prefetch.https.html fails with --site-isolation.
Attachments
Ryosuke Niwa
Comment 1 2026-05-08 00:09:22 PDT
EWS
Comment 2 2026-05-08 12:32:45 PDT
Committed 312911@main (339576162549): <https://commits.webkit.org/312911@main> Reviewed commits have been landed. Closing PR #64526 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-05-08 12:33:12 PDT
Note You need to log in before you can comment on or make changes to this bug.